# Loader_setup

./: .gitignore  CMakeLists.txt  Loader_setup.sln  README.md
Loader_setup/: EngineClass.cpp  EngineClass.h  FolderWatcher.msi  Loader_setup.vcxproj  Loader_setup.vcxproj.filters  OpenFileDlgClass.cpp  OpenFileDlgClass.h  SelOrigFilesClass.h  Utf16ToUtf8_Class.h  WndProcClass.cpp  WndProcClass.h  dirExists.cpp  dirExists.h  main.cpp
